Ignore query results for non-deterministic aggregate functions